# ZAP_Edit

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  OGGSurgeon.qml  Readme.md  ZAP_FILE.cpp  ZAP_FILE.h  audioeditoritem.cpp  audioeditoritem.h  main.cpp  oggformat.h  resources.qrc  zapfileexplorer.cpp  zapfileexplorer.h
